sections cover+lots

--- a/index.html
+++ b/index.html
@@ -5,6 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+        <nav >
+          <ul class="nav_link">
+            <li class="header_links-list-item_no-bullit">главная</li>
+            <li>смотреть лоты</li>
+            <li>об аукционе</li>
+          </ul>
+        </nav>
+        <a class="header_logo">
+          <img class="header_logo-image" src="images/logo-black.svg" alt="Логотип страницы"/>
+        </a>
+        <address>
+          <a href="tel:+99995555555">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          наб. Принсенграхт 263- 265, Амстердам
+        </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay">
+          <h1 class="cover_title">
+            <span class="ono">ОНО</span>
+            <span class="tebe">ТЕБЕ</span>
+            <span class="nado">НАДО</span>
+
+          </h1>
+          <div class="description">
+            <p class="description-text">
+              <span class="auction">АУКЦИОН </span>
+              <span class="veschey">ВЕЩЕЙ, </span>
+              <span class="kotory">В КОТОРЫЕ </span>
+              <span class="nikto">НИКТО </span>
+              <span class="ne_veril">НЕ ВЕРИЛ</span>
+            </p>
+              <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
+          </div>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="card-title">ЛОТЫ</h2>
+        <ul class="card_list">
+          <li>
+            <a href="">
+              <article class="card card_film">
+              <div class="card-overlay"></div>
+                <h3 class="card_film_title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card_film_text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <article class="card card_book">
+                <div class="card-overlay"></div>
+                <h3 class="card_book_title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card_book_text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <article class="card card_paint">
+                <div class="card-overlay"></div>
+                <h3 class="card_paint_title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card_paint_text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="see_more" href="">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about_column">
+          <div class="logo">
+          <a href="#0" class="white_logo_image"></a>
+          </div>
+          <div class="about_description">
+            <h3></h3>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+
+    </footer>
+  </body>
 </html>
