--- a/index.html
+++ b/index.html
@@ -84,17 +84,20 @@
       <section class="about">
         <div class="about_column">
           <div class="logo">
-          <a href="#0" class="white_logo_image"></a>
+          <img class="image_logo" src="images/logo-white.svg" alt="<белый логотип>"/>
           </div>
-          <div class="about_description">
-            <h3></h3>
-            <p></p>
-            <p></p>
-          </div>
+
+            <h2 class="about_title">об аукционе</h2>
+            <p class="about_text first">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p class="about_text second">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+
         </div>
       </section>
     </main>
     <footer>
+
+      hello
 
     </footer>
   </body>
