sections cover+lots+about+footer

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="header">
         <nav >
           <ul class="nav_link">
-            <li class="header_links-list-item_no-bullit">главная</li>
-            <li>смотреть лоты</li>
-            <li>об аукционе</li>
+            <li class="header_links-list-item_no-bullit"><a href="">главная</a></li>
+            <li><a href="">смотреть лоты</a></li>
+            <li><a href="">об аукционе</a></li>
           </ul>
         </nav>
         <a class="header_logo">
@@ -29,12 +29,11 @@
     </header>
     <main>
       <section class="cover">
-        <div class="overlay">
+        <div class="overlay"></div>
           <h1 class="cover_title">
             <span class="ono">ОНО</span>
             <span class="tebe">ТЕБЕ</span>
             <span class="nado">НАДО</span>
-
           </h1>
           <div class="description">
             <p class="description-text">
@@ -46,7 +45,7 @@
             </p>
               <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
           </div>
-        </div>
+
       </section>
       <section class="lots">
         <h2 class="card-title">ЛОТЫ</h2>
@@ -86,18 +85,31 @@
           <div class="logo">
           <img class="image_logo" src="images/logo-white.svg" alt="<белый логотип>"/>
           </div>
-
-            <h2 class="about_title">об аукционе</h2>
-            <p class="about_text first">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-            <p class="about_text second">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+          <h2 class="about_title">об аукционе</h2>
+          <p class="about_text first">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p class="about_text second">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
               на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
-
         </div>
       </section>
     </main>
-    <footer>
-
-      hello
+    <footer class="footer">
+      <address class="footer_address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        наб. Принсенграхт 263-265, Амстердам
+      </address>
+      <nav>
+        <div class="nav_footer">
+          <a href="">главная</a>
+          <a href="">посмотреть лоты</a>
+          <a href="">об аукционе</a></li>
+        </div>
+      </nav>
+      <div class="social">
+        <img src="images/yt.svg" alt="логотип-ссылка на ютьюб">
+        <img src="images/vk.svg" alt="логотип-ссылка на Вконтакте">
+        <img src="images/pinterest.svg" alt="логотип-ссылка на пинтрест">
+      </div>
 
     </footer>
   </body>
