sections cover+lots+about+footer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="nav_footer">
           <a href="">главная</a>
           <a href="">посмотреть лоты</a>
-          <a href="">об аукционе</a></li>
+          <a href="">об аукционе</a>
         </div>
       </nav>
       <div class="social">
