sections cover+lots+about+footer

--- a/index.html
+++ b/index.html
@@ -105,11 +105,26 @@
           <a href="">об аукционе</a>
         </div>
       </nav>
-      <div class="social">
-        <img src="images/yt.svg" alt="логотип-ссылка на ютьюб">
-        <img src="images/vk.svg" alt="логотип-ссылка на Вконтакте">
-        <img src="images/pinterest.svg" alt="логотип-ссылка на пинтрест">
+      <div class="social_media">
+        <ul class="footer_social-list">
+          <li>
+            <a href="">
+              <img class="footer_social-icon" src="images/yt.svg" alt="логотип-ссылка на ютьюб">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img class="footer_social-icon" src="images/vk.svg" alt="логотип-ссылка на Вконтакте">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img class="footer_social-icon" src="images/pinterest.svg" alt="логотип-ссылка на пинтрест">
+            </a>
+          </li>
+        </ul>
       </div>
+
 
     </footer>
   </body>
