sections cover+lots+about+footer

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav >
           <ul class="nav_link">
             <li class="header_links-list-item_no-bullit"><a href="">главная</a></li>
-            <li><a href="">смотреть лоты</a></li>
-            <li><a href="">об аукционе</a></li>
+            <li><a href="">посмотреть лоты</a></li>
+            <li><a href=""> об аукционе</a></li>
           </ul>
         </nav>
         <a class="header_logo">
