--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <header class="header">
         <nav >
-          <ul class="nav_link">
-            <li class="header_links-list-item_no-bullit"><a href="">главная</a></li>
+          <ul class="nav_list">
+            <li class="header_links-list-item_no-bullit"><a href="" class="active_link">главная</a></li>
             <li><a href="">посмотреть лоты</a></li>
             <li><a href=""> об аукционе</a></li>
           </ul>
@@ -21,7 +21,7 @@
         <a class="header_logo">
           <img class="header_logo-image" src="images/logo-black.svg" alt="Логотип страницы"/>
         </a>
-        <address>
+        <address class="address">
           <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           наб. Принсенграхт 263- 265, Амстердам
@@ -31,49 +31,49 @@
       <section class="cover">
         <div class="overlay"></div>
           <h1 class="cover_title">
-            <span class="ono">ОНО</span>
-            <span class="tebe">ТЕБЕ</span>
-            <span class="nado">НАДО</span>
+            <span class="text_left">ОНО</span>
+            <span class="text_center">ТЕБЕ</span>
+            <span class="text_right">НАДО</span>
           </h1>
           <div class="description">
             <p class="description-text">
-              <span class="auction">АУКЦИОН </span>
-              <span class="veschey">ВЕЩЕЙ, </span>
-              <span class="kotory">В КОТОРЫЕ </span>
-              <span class="nikto">НИКТО </span>
-              <span class="ne_veril">НЕ ВЕРИЛ</span>
+              АУКЦИОН
+              ВЕЩЕЙ,
+              В КОТОРЫЕ
+              НИКТО
+              НЕ ВЕРИЛ
             </p>
               <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
           </div>
 
       </section>
       <section class="lots">
-        <h2 class="card-title">ЛОТЫ</h2>
+        <h2 class="lots-title">ЛОТЫ</h2>
         <ul class="card_list">
           <li>
             <a href="">
               <article class="card card_film">
-              <div class="card-overlay"></div>
-                <h3 class="card_film_title">Фильм режиссёра, который бросил киношколу</h3>
-                <p class="card_film_text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              <div class="overlay"></div>
+                <h3 class="card_title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card_text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
           </li>
           <li>
             <a href="">
               <article class="card card_book">
-                <div class="card-overlay"></div>
-                <h3 class="card_book_title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-                <p class="card_book_text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                <div class="overlay"></div>
+                <h3 class="card_title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
             </a>
           </li>
           <li>
             <a href="">
               <article class="card card_paint">
-                <div class="card-overlay"></div>
-                <h3 class="card_paint_title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-                <p class="card_paint_text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                <div class="overlay"></div>
+                <h3 class="card_title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card_text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
             </a>
           </li>
@@ -85,25 +85,28 @@
           <div class="logo">
           <img class="image_logo" src="images/logo-white.svg" alt="<белый логотип>"/>
           </div>
+
           <h2 class="about_title">об аукционе</h2>
-          <p class="about_text first">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p class="about_text second">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+          <div class="about_text">
+          <p >Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p >Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
               на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          </div>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <address class="footer_address">
+      <address class="address footer_address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         наб. Принсенграхт 263-265, Амстердам
       </address>
       <nav>
-        <div class="nav_footer">
-          <a href="">главная</a>
-          <a href="">посмотреть лоты</a>
-          <a href="">об аукционе</a>
-        </div>
+        <ul class="nav_footer">
+          <li><a href="" class="active_link">главная</a></li>
+          <li><a href="">посмотреть лоты</a></li>
+          <li><a href="">об аукционе</a></li>
+        </ul>
       </nav>
       <div class="social_media">
         <ul class="footer_social-list">
@@ -124,8 +127,6 @@
           </li>
         </ul>
       </div>
-
-
     </footer>
   </body>
 </html>
